Unsure what happened as my entire project could no longer be emulated, got a backup from classmate that seemed most similair to alter as this version does work with my emulator. (error in generated build files which I could not figure out)

--- a/app/src/main/res/layout/fragment_game_add.xml
+++ b/app/src/main/res/layout/fragment_game_add.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:backgroundTint="@color/colorBackgroundDark"
     android:theme="@style/Theme.MaterialComponents.Light"
-    tools:context=".UI.AddGameFragment">
+    tools:context="com.example.madlevel5task2.UI.AddGameFragment">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/saveFab"
@@ -17,8 +17,7 @@
         android:background="#FFFFFF"
         android:backgroundTint="@color/colorPrimary"
         app:backgroundTint="@color/colorPrimary"
-        app:srcCompat="@android:drawable/ic_menu_save"
-        tools:ignore="ContentDescription" />
+        app:srcCompat="@android:drawable/ic_menu_save" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
