--- a/app/src/main/res/layout/fragment_backlog_game.xml
+++ b/app/src/main/res/layout/fragment_backlog_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.BacklogFragment">
+    tools:context="com.example.madlevel5task2.UI.GameBacklogFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvGameBacklog"
