--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,12 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.rayray.madlevel5task2.ui.MainActivity">
+    tools:context="com.rayray.MadLevel5Task2.ui.MainActivity">
     <item
         android:id="@+id/bin"
-        android:icon="@android:drawable/ic_delete"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:icon="@drawable/ic_delete_white_24dp"/>
 
 </menu>
