--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/gameBacklogFragment"
-        android:name="com.example.madlevel5task2.UI.BacklogFragment"
+        android:name="com.example.madlevel5task2.UI.GameBacklogFragment"
         android:label="fragment_backlog_game"
         tools:layout="@layout/fragment_backlog_game" >
         <action
